--- a/app/index.html
+++ b/app/index.html
@@ -23,12 +23,9 @@
 </head>
 
 <body>
-      <nav >
+      <nav role="navigation">
         <div class="nav-wrapper container">
-           <a id="logo" href="#" class="brand-logo">web<span>4</span>evo</a>
-            <a href="#" data-activates="mobile-nav" class="button-collapse">
-                <i class="material-icons">list</i>
-            </a>
+           <a href="#" class="brand-logo">web<span>4</span>evo</a>
            <ul class="right hide-on-med-and-down">
                <li><a href="#section01">About</a></li>
                <li><a href="#section02">Services</a></li>
@@ -41,6 +38,9 @@
                 <li><a href="#section03">Approach</a></li>
                 <li><a href="#section04">Contact</a></li>
             </ul>
+            <a href="#" data-activates="mobile-nav" class="button-collapse">
+                <i class="material-icons">list</i>
+            </a>
         </div>
       </nav>
       
@@ -70,7 +70,7 @@
               <p>As a dynamic team of experts in creation strategy of web design,
                   we implement the full set solutions for clients who require unique and sophisticated realization.
               </p>
-              <a href="#section03" class="waves-effect btn">find out more</a>
+              <a href="#section02" class="waves-effect btn">find out more</a>
             </div>
         </div>
       </section>
@@ -106,11 +106,13 @@
         </div>
       </section>
 
-      <div class="parallax-container">
-        <div class="parallax"><img src="img/03.jpg"></div>
+      <div class="parallax-container" >
+        <div class="parallax">
+            <img src="img/03.jpg">
+        </div>
       </div>
 
-      <section class="white">
+      <section>
         <div>
          <img class="extra" src="img/04.jpg">
         </div>
@@ -136,7 +138,6 @@
               <div class="progs col s3">
                 <img src="img/07-node.jpg">
               </div>
-
               <div class="progs col s3">
                 <img src="img/04-angular.jpg">
               </div>
@@ -150,36 +151,29 @@
                 <img src="img/05-jquery.jpg">
               </div>
         </div>
-
         </div>
         </section>
 
      <div class="footerUp">
          <div class="row container">
-           <div class="col s6 m4 l2">
-             <p>Contact</p>
-             <p>info@web4evo.com</p>
+           <div class="col s12 m4 l4">
+             <p>E-mail:</p><p>info@web4evo.com</p>
            </div>
-           <div class="col s6 m4 l2">
-             <p>Adress</p>
-             <p>Kyiv, Ukraine</p>
+           <div class="col s12 m4 l4">
+             <p>Address:</p><p> Kyiv, Ukraine</p>
            </div>
-           <div class="col s6 m4 l2">
-             <p>Telephone</p>
-             <p>+38 093 6174564</p>
+           <div class="col s12 m4 l42">
+             <p>Telephone</p><p>+38 093 6174564</p>
            </div>
-           <div class="col s6 m4 l2">
-             <p>Facebook</p>
-             <a href="//facebook.com" target="_blank">Welcome</a>
-           </div>
-           <div class="col s6 m4 l2">
-             <p>GitHub</p>
-             <a href="//github.com/Vladis-K" target="_blank">Welcome</a>
-           </div>
-           <div class="col s6 m4 l2">
-             <p>LinkedIn</p>
-             <a href="//www.linkedin.com/in/vladisk" target="_blank">Welcome</a>
-           </div>
+           <!--<div class="col s4 m4 l4">-->
+             <!--<a href="//facebook.com" target="_blank">F-book</a>-->
+           <!--</div>-->
+           <!--<div class="col s4 m4 l4">-->
+             <!--<a href="//github.com/Vladis-K" target="_blank">GitHub</a>-->
+           <!--</div>-->
+           <!--<div class="col s4 m4 l4">-->
+             <!--<a href="//www.linkedin.com/in/vladisk" target="_blank">LinkedIn</a>-->
+           <!--</div>-->
           </div>
     </div>
 
