--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
               <p>As a dynamic team of experts in creation strategy of web design,
                   we implement the full set solutions for clients who require unique and sophisticated realization.
               </p>
-              <a href="#section02" class="waves-effect btn">find out more</a>
+              <a href="#section02" class="waves-effect btn">Find out more</a>
             </div>
         </div>
       </section>
@@ -183,19 +183,19 @@
       </div>
     </footer>
 
-<div class="dotted backgroundHide">
-  <ul class="dotted">
-  <li><a href="#section01" class="active"></a></li>
-  <li><a href="#section02"></a></li>
-  <li><a href="#section03"></a></li>
-  <li><a href="#section04"></a></li>
-  </ul>
-</div>
+    <div class="dotted backgroundHide">
+      <ul class="dotted">
+      <li><a href="#section01" class="active"></a></li>
+      <li><a href="#section02"></a></li>
+      <li><a href="#section03"></a></li>
+      <li><a href="#section04"></a></li>
+      </ul>
+    </div>
 
-<div id="section01" class="par"></div>
-<div id="section02" class="par"></div>
-<div id="section03" class="par"></div>
-<div id="section04" class="par"></div>
+    <div id="section01" class="par"></div>
+    <div id="section02" class="par"></div>
+    <div id="section03" class="par"></div>
+    <div id="section04" class="par"></div>
 
     <!-- build:js js/vendor.min.js -->
     <!-- bower:js -->
