--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,8 @@
       </section>
 
       <div class="parallax-container">
-        <div class="parallax"><img src="img/02.jpg" alt="bg"></div>
+        <div class="parallax">
+            <img src="img/02.jpg" alt="bg"></div>
       </div>
 
       <section>
@@ -93,7 +94,8 @@
             <p>Our services</p>
             <p>Web design</p>
             <div></div>
-            <p>We follow on the main principles of effective web design - approaches which lead to more complicated design decisions and simplify the process of receiving presented information.</p>
+            <p>We follow on the main principles of effective web design - approaches which lead to more complicated
+                design decisions and simplify the process of receiving presented information.</p>
           </div>
           <div class="middleCards col s12 m4 l4">
               <img class="logo" src="img/logo-3.png">
