--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
               <p>Inspired of web</p>
               <div></div>
               <p>Focused on results</p>
-              <p>As a dynamic team of experts in creation strategy of web design,
+              <p class="description">As a dynamic team of experts in creation strategy of web design,
                   we implement the full set solutions for clients who require unique and sophisticated realization.
               </p>
               <a href="#section03" class="waves-effect btn">Find out more</a>
@@ -87,14 +87,14 @@
             <p>Our services</p>
             <p>Strategy</p>
             <div></div>
-            <p>For maximum effect, we focus on the industry in which the business is involved for that to conduct the necessary analysis in a competitive environment and applying innovative, fresh and bold ideas for the development of the client's business.</p>
+            <p class="description">For maximum effect, we focus on the industry in which the business is involved for that to conduct the necessary analysis in a competitive environment and applying innovative, fresh and bold ideas for the development of the client's business.</p>
           </div>
           <div class="middleCards col s12 m4 l4">
             <img class="logo" src="img/logo-2.png">
             <p>Our services</p>
             <p>Web design</p>
             <div></div>
-            <p>We follow on the main principles of effective web design - approaches which lead to more complicated
+            <p class="description">We follow on the main principles of effective web design - approaches which lead to more complicated
                 design decisions and simplify the process of receiving presented information.</p>
           </div>
           <div class="middleCards col s12 m4 l4">
@@ -102,10 +102,9 @@
               <p>Our services</p>
               <p>Development</p>
               <div></div>
-              <p>Web development is the enables website functionality, per the client's requirements. Web development ranges from creating plain text pages to complex Web-based applications. We provide smart principles of effective web development.<p>
+              <p class="description">Web development is the enables website functionality, per the client's requirements. Web development ranges from creating plain text pages to complex Web-based applications. We provide smart principles of effective web development.<p>
             </div>
           </div>
-        </div>
       </section>
 
       <div class="parallax-container" >
@@ -125,7 +124,7 @@
                  <p>Achieve results with</p>
                  <div></div>
                  <p>Full stack</p>
-                 <p>Applying deliberate steps in planning of graphic design, web design and web applications,
+                 <p class="description">Applying deliberate steps in planning of graphic design, web design and web applications,
                   you will obtain high quality project, based on effective interaction of programs.</p>
               </div>
               <div class="progs col s6 m3 l3">
@@ -141,41 +140,32 @@
                 <img src="img/07-node.jpg">
               </div>
               <div class="progs col s6 m3 l3">
-                <img src="img/04-angular.jpg">
+                <img src="img/04-react.jpg">
               </div>
                <div class="progs col s6 m3 l3">
+                <img src="img/06-redux.jpg">
+              </div>
+              <div class="progs col s6 m3 l3">
+                <img src="img/08-docker.jpg">
+              </div>
+              <div class="progs col s6 m3 l3">
                 <img src="img/06-bootstrap.jpg">
-              </div>
-              <div class="progs col s6 m3 l3">
-                <img src="img/08-github.jpg">
-              </div>
-              <div class="progs col s6 m3 l3">
-                <img src="img/05-jquery.jpg">
               </div>
         </div>
         </div>
         </section>
 
-     <div class="footerUp">
+     <div class="footer-content">
          <div class="row container">
            <div class="col s12 m4 l4">
-             <p>E-mail:</p><p>info@web4evo.com</p>
+             <p class="contact-sign">E-mail:</p><p>info@web4evo.com</p>
            </div>
            <div class="col s12 m4 l4">
-             <p>Address:</p><p> Kyiv, Ukraine</p>
+             <p class="contact-sign">Address:</p><p>Kyiv, Ukraine</p>
            </div>
-           <div class="col s12 m4 l42">
-             <p>Telephone</p><p>+38 093 6174564</p>
+           <div class="col s12 m4 l4">
+             <p class="contact-sign">Telephone</p><p>+38 050 6144485</p>
            </div>
-           <!--<div class="col s4 m4 l4">-->
-             <!--<a href="//facebook.com" target="_blank">F-book</a>-->
-           <!--</div>-->
-           <!--<div class="col s4 m4 l4">-->
-             <!--<a href="//github.com/Vladis-K" target="_blank">GitHub</a>-->
-           <!--</div>-->
-           <!--<div class="col s4 m4 l4">-->
-             <!--<a href="//www.linkedin.com/in/vladisk" target="_blank">LinkedIn</a>-->
-           <!--</div>-->
           </div>
     </div>
 
